using System;

class Bunny: Mammal
{

}
