using System;

class Cat: Mammal
{

}
