using System;

class Goldfish: Fish
{

}
