using System;

abstract class Guppy: Fish
{

}
