using System;

interface IStrokeable
{

}
